Refactor code and add functionality to iterations.

--- a/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
+++ b/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Graph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VertexCoverGeneticAlgorithm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
