--- a/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj
+++ b/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Arch.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Individual.h" />
+    <ClInclude Include="VertexCoverGeneticAlgorithm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
