--- a/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
+++ b/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="intrare.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
