--- a/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj
+++ b/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="VertexCoverGeneticAlgorithm.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="iesire.txt" />
     <Text Include="intrare.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
