--- a/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
+++ b/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Arch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VertexCoverGeneticAlgorithm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Individual.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VertexCoverGeneticAlgorithm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
