Change the way fitness function is calculated. Now, the individual calculates it in the beginning at every mutation.

--- a/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj
+++ b/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AlgorithmData.cpp" />
     <ClCompile Include="Arch.cpp" />
     <ClCompile Include="GeneticAlgorithmVertexCover.cpp" />
     <ClCompile Include="Graph.cpp" />
