--- a/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
+++ b/GeneticAlgorithmVertexCover/GeneticAlgorithmVertexCover.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="VertexCoverGeneticAlgorithm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AlgorithmData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Individual.h">
